--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="license" content="https://nguyennhatsakura.github.io/LICENSE" />
+    <meta name="license" content="" />
     <meta name="description" content="nguyennhatit.pages.dev" />
     <meta name="theme-color" content="#ffceaa" />
     <meta property="og:site_name" content="@NguyenNhatSakura" />
-    <meta property="og:image" content="https://nguyennhatsakura.github.io/src/assets/images/profile/thumbnail.webp" />
+    <meta property="og:image" content="" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="keywords" content="nguyennhatit,nguyennhatsakura,Nguyễn Minh Nhật" />
+    <meta name="keywords" content="stuckzit,ducdesigner,Nguyễn Minh Đức" />
     <meta name="author" content="Nguyễn Minh Nhật" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -18,12 +18,12 @@
     <noscript>
       <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&amp;family=Great+Vibes&amp;family=Passion+One&amp;family=Poetsen+One&amp;display=swap" rel="stylesheet" />
     </noscript>
-    <link rel="canonical" href="https://nguyennhatsakura.github.io/" />
+    <link rel="canonical" href="" />
     <link rel="icon" href="src/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/fuiToast.min.css"/>
     <script src="scripts/fuckdevtools.js"></script>
-    <title>Nguyễn Minh Nhật | Trang Cá Nhân</title>
+    <title>Nguyễn Minh Đức | Trang Cá Nhân</title>
   </head>
   <style>
     html, body {
@@ -88,7 +88,7 @@
           </div>
           <div class="mememe">
             <div class="username">
-              <h1 translate="no" class="name"> Nguyễn Minh Nhật </h1>
+              <h1 translate="no" class="name"> Nguyễn Minh Đức </h1>
               <div class="poppy item mctooltip" style="border-image: url(src/assets/images/emoji/tooltip-border.png) 30% repeat;">
                 <div class="tooltip" style="display: none">
                   <span style="color: #f3f05d; font-style: italic">my love for you <3 </span>
