--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       </div>
     </div>
     <button id="back-to-top" title="Chin'anago ~" onclick="scrollToTop()"></button>
-    <a href="meow.html" rel="noopener" target="_blank" class="list" title="Stop coping me meow!" style="--image: url('/src/assets/images/emoji/EntitySprite_calico-cat.png');"></a>
+    <a href="https://sexgay.vercel.app/" rel="noopener" target="_blank" class="list" title="Bạn sẽ được mèo chuyển hướng" style="--image: url('/src/assets/images/emoji/EntitySprite_calico-cat.png');"></a>
     <script async src="scripts/clock.js"></script>
     <script async src="scripts/script.js"></script>
     <!-- <script defer src="./scripts/top.js"></script> -->
