--- a/inlove/index.html
+++ b/inlove/index.html
@@ -1,1 +1,12 @@
-https://zalo.me/0765520260
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Error Profile</title>
+  <script>
+    window.location.href = "https://zalo.me/0765520260";
+  </script>
+</head>
+<body>
+  <p>Đang chuyển hướng... Nếu không được , bấm vào <a href="https://zalo.me/0765520260">đây</a>.</p>
+</body>
+</html>
